Fixes #555